# COP290A4

./: .gitignore  CMakeLists.txt  Readme.md
include/: column.h  eager_df.h  exp.h  lazy_df.h  query_optimizer.h  types.h
include/dataframelib/: dataframelib.h
src/: binary_op.cpp  constant_node.cpp  exp.cpp  main.cpp
